--- a/springboot-janp/.gitignore
+++ b/springboot-janp/.gitignore
@@ -1,4 +1,6 @@
-!.mvn/wrapper/maven-wrapper.jar
+.gradle
+/build/
+!gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
 .apt_generated
@@ -14,13 +16,10 @@
 *.iml
 *.ipr
 
-
-**/node_modules
-**/dist
-**/.tmp
-**/.sass-cache
-**/bower_components
-
-
-### CUSTOM ###
+### NetBeans ###
+nbproject/private/
 build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
